style.css
*{margin:0;padding:0}
body{height:100vh}
#root{width: 100%;height: 100%; overflow-y: hidden;}

/* #input{height: 300px} */

#workspace{
    background: #333333aa;
    width: 100%;
    height: 490px;
    border-radius: 5px;
    overflow-y: scroll;
}
#workspace::-webkit-scrollbar {
    width: 16px;
}

#workspace::-webkit-scrollbar-track {
    border-radius: 8px;
    background-color: #555;
    border: 1px solid #111;
}

#workspace::-webkit-scrollbar-thumb {
    border-radius: 8px;
    border: 3px solid transparent;
    background-clip: content-box;
    background-color: #ffc107aa;
}

